# wiki_racer_solver

./: .clang-format  CMakeLists.txt  justfile
src/: arena.c  build_graph.c  header.h  interner.c  log.c  parser.c  parser.h  str.c  vec.c
tests/: test_main.c
